@@ -11,7 +11,7 @@ Depends: methods
 Suggests: testthat, snowfall, multicore, Rmpi
 LazyData: yes
 ByteCompile: yes
-Version: 1.1-125
+Version: 1.1-132
 Collate: 'catf.R' 'checkArg.R' 'checkListElementClass.R' 'chunk.R'
         'coalesce.R' 'collapse.R' 'convertInteger.R' 'directory.R'
         'extractSubList.R' 'factor.R' 'insert.R' 'is_error.R'
@@ -21,6 +21,6 @@ Collate: 'catf.R' 'checkArg.R' 'checkListElementClass.R' 'chunk.R'
         'printToChar.R' 'requirePackages.R' 'save2.R' 'splitTime.R'
         'stopf.R' 'stringsAsFactors.R' 'suppressAll.R' 'system3.R'
         'warningf.R' 'zzz.R'
-Packaged: 2012-05-09 23:09:54 UTC; bischl
+Packaged: 2012-07-03 23:52:23 UTC; bischl
 Repository: CRAN
-Date/Publication: 2012-05-10 04:14:50
+Date/Publication: 2012-07-04 05:56:03
