@@ -1,3 +1,4 @@
+export("%nin%")
 export(catf)
 export(cFactor)
 export(checkArg)
@@ -9,9 +10,9 @@ export(convertInteger)
 export(convertIntegers)
 export(extractSubList)
 export(insert)
+export(is.error)
 export(isDirectory)
 export(isEmptyDirectory)
-export(is.error)
 export(isExpensiveExampleOk)
 export(isProperlyNamed)
 export(listToShortString)
@@ -19,7 +20,6 @@ export(load2)
 export(makeProgressBar)
 export(messagef)
 export(namedList)
-export("%nin%")
 export(parallelMap)
 export(parallelStart)
 export(parallelStop)
